--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
 
             <!-- btn -->
-            <button class="button1">
+            <button class="button1 btn">
               <span class="button_lg">
                 <span class="button_sl"></span>
                 <span class="button_text">Send</span>
